# langscan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tag.yml
src/: main.rs  output.rs  scanner.rs
src/lang/: arabic.rs  chinese.rs  cjk.rs  cyrillic.rs  greek.rs  hebrew.rs  hindi.rs  japanese.rs  korean.rs  latin.rs  mod.rs  persian.rs  polish.rs  thai.rs  turkish.rs  ukrainian.rs  urdu.rs  vietnamese.rs
src/lang/data/: chinese_simplified.rs  chinese_traditional.rs  korean_kr.rs  mod.rs  persian.rs  urdu.rs  vietnamese.rs
src/lang/markers/: arabic.rs  cjk.rs  cyrillic.rs  greek.rs  hebrew.rs  hindi.rs  japanese.rs  korean_kp.rs  korean_kr.rs  latin.rs  mod.rs  persian.rs  polish.rs  thai.rs  turkish.rs  ukrainian.rs  urdu.rs  vietnamese.rs
src/scanner/: detect.rs  flags.rs  highlight.rs  mod.rs
testdata/: sample.txt
