[package]
name = "langscan"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
